ansible/rke2/role/deploy_app/files/oss_yaml/mariadb-exporter.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysqld-exporter
  namespace: db # db namespace
  labels:
    app: mysqld-exporter
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 9104
      protocol: TCP
  selector:
    app: mysqld-exporter

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqld-exporter
  namespace: db # db namespace
  labels:
    app: mysqld-exporter
spec:
  selector:
    matchLabels:
      app: mysqld-exporter
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9104"
      labels:
        app: mysqld-exporter
    spec:
      nodeSelector:
        db: "true"
      tolerations:
        - effect: NoSchedule
          key: db
          operator: Equal
          value: "true"
      containers:
        - name: mysqld-exporter
          image: REGITSRYIP/third-party/prom/mysqld-exporter:v0.15.0
          imagePullPolicy: Always
          volumeMounts:
          - name: mysqld-exporter-config
            mountPath: /etc/.mysqld_exporter.cnf
            subPath: .mysqld_exporter.cnf
          args:
          - --config.my-cnf=/etc/.mysqld_exporter.cnf
          - --mysqld.address=mariadb.db.svc.cluster.local:3306
          - --collect.info_schema.tables
          # - --collect.info_schema.innodb_tablespaces
          - --collect.info_schema.innodb_metrics
          - --collect.global_status
          - --collect.global_variables
          - --collect.slave_status
          - --collect.info_schema.processlist
          - --collect.perf_schema.tablelocks
          - --collect.perf_schema.eventsstatements
          # - --collect.perf_schema.eventsstatementssum
          - --collect.perf_schema.eventswaits
          - --collect.auto_increment.columns
          - --collect.binlog_size
          - --collect.perf_schema.tableiowaits
          - --collect.perf_schema.indexiowaits
          - --collect.info_schema.userstats
          - --collect.info_schema.clientstats
          - --collect.info_schema.tablestats
          - --collect.info_schema.schemastats
          - --collect.perf_schema.file_events
          - --collect.perf_schema.file_instances
          # - --collect.perf_schema.replication_group_member_stats
          # - --collect.perf_schema.replication_applier_status_by_worker
          # - --collect.slave_hosts
          - --collect.info_schema.innodb_cmp
          - --collect.info_schema.innodb_cmpmem
          - --collect.info_schema.query_response_time
          # - --collect.engine_tokudb_status
          - --collect.engine_innodb_status
          ports:
            - containerPort: 9104
              protocol: TCP
      volumes:
      - name: mysqld-exporter-config
        configMap:
          name: mysqld-exporter-config
