ansible/rke2/role/deploy_app/files/oss_yaml/solr-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: solr-headless
  namespace: solr
  labels:
    app: solr-app
spec:
  clusterIP: None
  selector:
    app: solr-app
---
apiVersion: v1
kind: Service
metadata:
  name: solr
  namespace: solr
  labels:
    app: solr-app
spec:
  ports:
  - protocol: TCP
    port: 8983
    targetPort: 8983
  type: ClusterIP
  selector:
    app: solr-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: solr
  namespace: solr
spec:
  selector:
    matchLabels:
      app: solr-app 
  serviceName: "solr-headless"
  replicas: 3 
  template:
    metadata:
      labels:
        app: solr-app 
    spec:
      tolerations:
        - key: "oss"
          value: "true"
          operator: "Equal"
          effect: "NoSchedule"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: "solr"
                operator: In
                values:
                - "true"
      terminationGracePeriodSeconds: 10
      restartPolicy: Always
      containers:
      - name: solr
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "4"
            memory: "8Gi"
        image: "REGISTRYIP/third-party/aibot-solr:0.0.1"
        imagePullPolicy: IfNotPresent
        readinessProbe:
          tcpSocket:
            port: 8983
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8983
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: volsolr
          mountPath: /store
        - name: solr-in-sh-cm
          mountPath: /opt/solr/bin/solr.in.sh
          readOnly: false
          subPath: solr.in.sh  
        ports:
        - name: solrport
          containerPort: 8983
      volumes:
        - name: solr-in-sh-cm
          configMap:
            defaultMode: 0755
            name: solr-in-sh-cm
  volumeClaimTemplates:
  - metadata:
      name: volsolr
    spec:
      accessModes: [ "ReadWriteMany" ]
      resources:
        requests:
          storage: 10Gi
